# fg-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fg_cli/: __init__.py  api.py  dataset.py  health.py  obs.py
tests/: test_api.py
