[project]
name = "fg_cli"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [ "requests>=2" ]

[dependency-groups]
dev = ["deptry", "pyright", "pytest", "ruff"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.14
target-version = "py314"

# All rules: https://beta.ruff.rs/docs/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "TC003", # type checking block is not yet considered such a big perf hit
  "ISC001", "COM812", # conflicts with other formatters
  "FBT001", "FBT002", # boolean with default argument is ok
]
exclude = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"] # init-files can re-export, dont need docs
"**/tests/*" = ["S101", "INP001", "ANN201", "PT011", "PLR2004"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
packages = ["fg_cli"]
